# game-patterns-rs

./: .cspell.json  Cargo.toml  LICENSE  README.md
examples/behavior/: bytecode.rs  intent.rs  sandbox.rs
examples/decouple/: component.rs  event-queue.rs  service-locator.rs
examples/design/: command.rs  flyweight.rs  observer.rs  prototype.rs  prototype.toml  singleton.md  state.rs
examples/optimize/: data-locality.rs  dirty-flag.md  object-pool.md  spatial-partition.rs
examples/sequence/: double-buffer.rs  game-loop.rs  update.rs
examples/sequencing/: double-buffer.rs  game-loop.rs  update.rs
src/: main.rs
