[package]
name = "game-patterns-rs"
version = "0.1.0"
edition = "2021"
publish = false


[dev-dependencies]
rand = "0.8.5"
serde = "1.0.152"
serde_derive = "1.0.152"
toml = "0.5.10"

[[example]]
name = "design-command"
path = "examples/design/command.rs"

[[example]]
name = "design-flyweight"
path = "examples/design/flyweight.rs"

[[example]]
name = "design-observer"
path = "examples/design/observer.rs"

[[example]]
name = "design-prototype"
path = "examples/design/prototype.rs"

[[example]]
name = "design-state"
path = "examples/design/state.rs"

[[example]]
name = "sequence-double-buffer"
path = "examples/sequence/double-buffer.rs"

[[example]]
name = "sequence-game-loop"
path = "examples/sequence/game-loop.rs"

[[example]]
name = "sequence-update"
path = "examples/sequence/update.rs"

[[example]]
name = "behavior-bytecode"
path = "examples/behavior/bytecode.rs"

[[example]]
name = "behavior-sandbox"
path = "examples/behavior/sandbox.rs"

[[example]]
name = "behavior-intent"
path = "examples/behavior/intent.rs"

[[example]]
name = "decouple-component"
path = "examples/decouple/component.rs"

[[example]]
name = "decouple-event-queue"
path = "examples/decouple/event-queue.rs"

[[example]]
name = "decouple-service-locator"
path = "examples/decouple/service-locator.rs"
